# Media_Video_Audio_work

./: mac 平台 编译ffmpeg.md
LearnFFmpeg-master/app/: build.gradle
MediaPlayerFive/: README.md  build.gradle  settings.gradle
MediaPlayerFive/app/: build.gradle
MediaPlayerFive/app/src/main/: AndroidManifest.xml
MediaPlayerFive/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
MediaPlayerFive/app/src/main/cpp/common/: AVPacketQueue.h  SyncClock.h  ThreadSafeQueue.h
MediaPlayerFive/app/src/main/cpp/include/libavcodec/: avcodec.h
MediaPlayerFive/app/src/main/cpp/lib_ffmpeg/armeabi-v7a/lib/pkgconfig/: libavcodec.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
MediaPlayerFive/app/src/main/cpp/player/: FFMediaPlayer.cpp  FFMediaPlayer.h  HWCodecPlayer.cpp  HWCodecPlayer.h  PlayerWrapper.cpp  PlayerWrapper.h
MediaPlayerFive/app/src/main/cpp/player/decoder/: AudioDecoder.cpp  AudioDecoder.h  Decoder.h  DecoderBase.cpp  DecoderBase.h  VideoDecoder.cpp  VideoDecoder.h
MediaPlayerFive/app/src/main/cpp/player/render/: BaseGLRender.h  MediaPlayer.h
MediaPlayerFive/app/src/main/cpp/player/render/audio/: AudioGLRender.cpp  AudioGLRender.h  AudioRender.h  OpenSLRender.cpp  OpenSLRender.h
MediaPlayerFive/app/src/main/cpp/player/render/video/: NativeRender.cpp  NativeRender.h  VRGLRender.cpp  VRGLRender.h  VideoGLRender.cpp  VideoGLRender.h  VideoRender.h
MediaPlayerFive/app/src/main/cpp/recorder/: GLCameraRender.cpp  GLCameraRender.h  MediaRecorder.cpp  MediaRecorder.h  MediaRecorderContext.cpp  MediaRecorderContext.h  SingleAudioRecorder.cpp  SingleAudioRecorder.h  SingleVideoRecorder.cpp  SingleVideoRecorder.h
MediaPlayerFive/app/src/main/cpp/util/: GLUtils.cpp  GLUtils.h  ImageDef.h
MediaPlayerFive/gradle/wrapper/: gradle-wrapper.properties
MediaPlayerSeven/: build.gradle  settings.gradle
MediaPlayerSeven/app/: build.gradle
MediaPlayerSeven/app/src/main/: AndroidManifest.xml
MediaPlayerSeven/gradle/wrapper/: gradle-wrapper.properties
MediaPlayer_One/: settings.gradle
MediaPlayer_One/app/: build.gradle
MediaPlayer_One/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
MediaPlayer_One/app/src/main/cpp/armv7-a/lib/pkgconfig/: libavcodec.pc  libavfilter.pc  libavformat.pc
MediaPlayer_One/app/src/main/cpp/armv8-a/lib/pkgconfig/: libavcodec.pc  libavfilter.pc
MediaPlayer_One/app/src/main/cpp/lib_ffmpeg/arm64-v8a/include/libavutil/: ffversion.h
MediaPlayer_One/app/src/main/cpp/lib_ffmpeg/arm64-v8a/lib/pkgconfig/: libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
MediaPlayer_One/app/src/main/cpp/lib_ffmpeg/armeabi-v7a/lib/pkgconfig/: libavutil.pc  libswresample.pc  libswscale.pc
MediaPlayer_One/app/src/main/cpp/lib_ffmpeg/x86/lib/pkgconfig/: libavformat.pc  libswresample.pc  libswscale.pc
MediaPlayer_One/app/src/main/cpp/lib_ffmpeg/x86_64/lib/pkgconfig/: libavfilter.pc  libavformat.pc
MediaPlayer_One/app/src/main/cpp/x86-64/lib/pkgconfig/: libswresample.pc
MediaPlayer_One/app/src/main/cpp/x86/lib/pkgconfig/: libavcodec.pc  libavfilter.pc  libavutil.pc
RTMP/1_send_flv/: CMakeLists.txt  README.md  main.c
RTMP/1_send_flv/librtmp/: CMakeLists.txt
RTMP/2_rtmp_receive/: CMakeLists.txt  main.c  readme.md
RTMP/2_rtmp_receive/librtmp/: CMakeLists.txt  rtmp.c  rtmp.h
main_ffmpeg/1_ffmpeg_env/: main.c
raw_dir/ffmpeg/: VERSION  build_core_ffmpeg.sh  config.h  config_components.h
raw_dir/ffmpeg/doc/: config.texi
raw_dir/ffmpeg/ffbuild/: config.fate  config.mak  config.sh
raw_dir/ffmpeg/libavcodec/: 012v.d  4xm.d  8bps.d  8svx.d  a64multienc.d  aac_ac3_parser.d  aac_adtstoasc_bsf.d  aac_parser.d  aaccoder.d  aacdec.d  aacdec_fixed.d  aacenc.d  aacenc_is.d  aacenc_ltp.d  aacenc_pred.d  aacenc_tns.d  aacenctab.d  aacps_common.d  aacps_fixed.d  aacps_float.d  aacpsdsp_fixed.d  aacpsy.d  aacsbr.d  aacsbr_fixed.d  aactab.d  aasc.d  ac3_parser.d  ac3dec_fixed.d  ac3dec_float.d  ac3dsp.d  ac3enc.d  ac3enc_fixed.d  ac3enc_float.d  acelp_filters.d  acelp_pitch_delay.d  acelp_vectors.d  adpcm.d  adpcmenc.d  adts_header.d  adts_parser.d  (+792 more)
raw_dir/ffmpeg/libavfilter/: aeval.d  af_acontrast.d  af_acopy.d  af_acrossover.d  af_acrusher.d  af_adeclick.d  af_adecorrelate.d  af_adelay.d  af_adenorm.d  af_aderivative.d  af_adynamicequalizer.d  af_adynamicsmooth.d  af_aecho.d  af_aemphasis.d  af_aexciter.d  af_afade.d  af_afftdn.d  af_afftfilt.d  af_afir.d  af_aformat.d  af_afreqshift.d  af_afwtdn.d  af_agate.d  af_aiir.d  af_alimiter.d  af_amerge.d  af_amix.d  af_amultiply.d  af_anequalizer.d  af_anlmdn.d  af_anlms.d  af_anull.d  af_apad.d  af_aphaser.d  af_apsyclip.d  af_apulsator.d  af_aresample.d  af_arnndn.d  af_asdr.d  af_asetnsamples.d  (+350 more)
raw_dir/ffmpeg/libavformat/: 3dostr.d  4xm.d  a64.d  aacdec.d  aadec.d  aaxdec.d  ac3dec.d  acedec.d  acm.d  act.d  adp.d  ads.d  adtsenc.d  adxdec.d  aea.d  afc.d  aiff.d  aiffdec.d  aiffenc.d  aixdec.d  allformats.d  alp.d  amr.d  amvenc.d  anm.d  apc.d  ape.d  apetag.d  apm.d  apngdec.d  apngenc.d  aptxdec.d  aqtitledec.d  argo_asf.d  argo_brp.d  argo_cvg.d  asf.d  asf_tags.d  asfcrypt.d  asfdec_f.d  (+447 more)
raw_dir/ffmpeg/libavutil/: aes.d  aes_ctr.d  audio_fifo.d  avstring.d  blowfish.d  bprint.d  buffer.d  camellia.d  cast5.d  channel_layout.d  cpu.d  crc.d  des.d  detection_bbox.d  dict.d  dovi_meta.d  downmix_info.d  encryption_info.d  eval.d  fifo.d  file.d  file_open.d  film_grain_params.d  fixed_dsp.d  float_dsp.d  frame.d  hdr_dynamic_metadata.d  hdr_dynamic_vivid_metadata.d  hmac.d  hwcontext.d  imgutils.d  intmath.d  libavutil.pc  libavutil.so.57  libavutil.version  lls.d  log.d  lzo.d  mastering_display_metadata.d  mathematics.d  (+28 more)
raw_dir/ffmpeg/libswresample/: audioconvert.d  dither.d  libswresample.so.4  options.d  rematrix.d  resample.d  resample_dsp.d  swresample.d  swresample_frame.d  version.d
raw_dir/ffmpeg/libswscale/: alphablend.d  gamma.d  hscale.d  hscale_fast_bilinear.d  input.d  libswscale.pc  libswscale.so.6  libswscale.version  options.d  output.d  rgb2rgb.d  slice.d  swscale.d  swscale_unscaled.d  utils.d  version.d  vscale.d  yuv2rgb.d
(+113 files in other folders)
